[package]
name = "bevy-test"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.9.1", features = ["wayland"] }
bevy_rapier3d = { version = "0.20.0", features = ["debug-render", "parallel", "enhanced-determinism"] }
bevy_egui = "0.19.0"
bevy-inspector-egui = "0.17.0"
futures-lite = "1.12.0"
ron = "0.8.0"
regex = "1.7.1"

# Fast-compile config for crates in this workspace
[profile.dev]
opt-level = 0
overflow-checks = true
debug-assertions = true
debug = true
codegen-units = 8
lto = false
incremental = true

# Use opt level 3 for dependencies not part of this workspace
[profile.dev.package."*"]
opt-level = 3
